# NVAR

./: .gitignore  CMakeLists.txt  README.md
d_heyburn_code/esn_final/: ErrorFunctions.py  WeightsInit.py  static_esn.py  static_opt.py
d_heyburn_code/esn_final/metadata/extra_integrated_Sat_Jan__6_12_25_16_2024/: 17.json
d_heyburn_code/esn_final/metadata/extra_measured_Fri_Jan__5_22_58_02_2024/: 17.json
d_heyburn_code/esn_final/metadata/measured_N_Fri_Jan__5_10_35_59_2024/: 21.json
d_heyburn_code/esn_final/metadata/measured_Thu_Jan__4_22_45_36_2024/: 17.json  23.json  measured_data_notes.txt
d_heyburn_code/esn_final/metadata/seed_test/: 17.json
d_heyburn_code/esn_final/metadata/upsampled_integrated_Thu_Jan__4_05_21_42_2024/: 17.json  21.json  23.csv  integrated_data_notes.txt
d_heyburn_code/extra_tests/: Mackey-Glass_test.py  data_setup.ipynb  static_esn_copy_L-2.py  static_esn_integrated_with_dV_predict_dV.py  training_recreation.py
d_heyburn_code/nvar_py_tests/: NVAR experiment.ipynb  NVAR1.py  NVAR2.py  NVAR_objective.py  Weights_Extraction.ipynb  function_checking.ipynb  multiple_plots.py  test1.py  test2.py  test3.py  weight_fluctuations.ipynb
d_heyburn_code/old_attempts/: ESN.py
d_heyburn_code/reservoirpy_tests/: ReservoirPy-Experiment.ipynb  ReservoirPy-Objective.py  predictive_ESN_test.py
d_heyburn_code/results_Analysis/: i_param_search_plotting.ipynb  param_search_plotting_rmse.ipynb
d_heyburn_code/results_Analysis/Sat_Jan__6_12_25_16_2024/: 17.csv  21.csv  21.json  23.csv  23.json  json_to_csv_converter.ipynb
d_heyburn_code/results_Analysis/extra_measured_Fri_Jan__5_22_58_02_2024/: 17.csv  21.csv  21.json  23.csv  23.json  json_to_csv_converter.ipynb
d_heyburn_code/results_Analysis/final_sets/: N_test_17.csv  integrated_17.csv  integrated_21.csv  integrated_23.csv  measured_17.csv  measured_21.csv  measured_23.csv  seed_test_17.csv  seed_test_21.csv  seed_test_23.csv
d_heyburn_code/results_Analysis/huge_N_measured_Sun_Jan__7_01_46_24_2024/: 17.csv  17.json  json_to_csv_converter.ipynb
d_heyburn_code/results_Analysis/measured_N_Fri_Jan__5_10_35_59_2024/: 17.csv  17.json  21.csv  23.csv  23.json  json_to_csv_converter.ipynb
d_heyburn_code/results_Analysis/measured_Thu_Jan__4_22_45_36_2024/: 17.csv  21.csv  21.json  23.csv  json_to_csv_converter.ipynb
d_heyburn_code/results_Analysis/measured_signal_with_int_parameters/: 17.csv  17.json  21.csv  21.json  23.csv  23.json  json_to_csv_converter.ipynb
d_heyburn_code/results_Analysis/seed_test/: 21.json  23.json  json_to_csv_converter.ipynb
d_heyburn_code/results_Analysis/upsampled_integrated_Thu_Jan__4_05_21_42_2024/: 17.csv  21.csv  23.json
data/: analyse_json.py  combine_dat_files.py  create_test_data.py  decompress_signal.py  distribution.py  gen_train_test_data.py  plot_all_hh.py  plot_custom.py  plot_doublescroll.py  plot_doublescroll_esn.py  plot_esn.py  plot_file.py  plot_forecast.py  plot_hh_model.py
data/forecast_data/: doublescroll_predict.csv  doublescroll_reconstruct.csv  features1.csv  features2.csv  forecast.csv  tmp.csv
data/metadata/: 17_measured_100.json  22_measured_100.json  22_measured_100_2024-01-02_12:08:21.066232342.json  22_measured_100_2024-01-02_13:13:16.172331006.json  25_measured_100.json  28_measured_100.json
data/test_data/: 17_1_-1_23113_1_0_4.csv  17_1_-1_23113_1_1_4.csv  17_1_-1_23113_1_2_4.csv  17_1_-1_23113_1_3_4.csv  17_1_-1_23113_1_4_4.csv  17_1_-1_41363_1_1_2.csv  17_1_-1_41363_1_2_2.csv  17_1_-1_46227_1_1_2.csv  17_1_-1_46227_1_2_2.csv  17_1_-1_47475_0_0_4.csv  17_1_-1_47475_0_1_4.csv  17_1_-1_47475_0_2_4.csv  17_1_-1_47475_0_3_4.csv  17_1_-1_47475_0_4_4.csv  17_1_-1_92455_1_1_1.csv  17_1_-1_92727_1_1_1.csv  21_1_-1_22859_1_0_4.csv  21_1_-1_22859_1_1_4.csv  21_1_-1_22859_1_2_4.csv  21_1_-1_22859_1_3_4.csv  21_1_-1_22859_1_4_4.csv  21_1_-1_40798_1_1_2.csv  21_1_-1_40798_1_2_2.csv  21_1_-1_45719_1_1_2.csv  21_1_-1_45719_1_2_2.csv  21_1_-1_47475_0_0_4.csv  21_1_-1_47475_0_1_4.csv  21_1_-1_47475_0_2_4.csv  21_1_-1_47475_0_3_4.csv  21_1_-1_47475_0_4_4.csv  21_1_-1_91438_1_1_1.csv  21_1_-1_91597_1_1_1.csv  22_1_-1_22930_1_0_4.csv  22_1_-1_22930_1_1_4.csv  22_1_-1_22930_1_2_4.csv  22_1_-1_22930_1_3_4.csv  22_1_-1_22930_1_4_4.csv  22_1_-1_40955_1_1_2.csv  22_1_-1_40955_1_2_2.csv  22_1_-1_45860_1_1_2.csv  (+146 more)
data/train_data/: 17_0_-1_10000_0_1_1.csv  17_0_-1_10000_0_1_2.csv  17_0_-1_10000_0_2_2.csv  17_0_-1_10000_1_1_1.csv  17_0_-1_10000_1_1_2.csv  17_0_-1_10000_1_2_2.csv  17_0_-1_10272_1_1_1.csv  17_0_-1_21000_0_1_1.csv  17_0_-1_21100_0_1_1.csv  17_0_-1_2568_1_0_4.csv  17_0_-1_2568_1_1_4.csv  17_0_-1_2568_1_2_4.csv  17_0_-1_2568_1_3_4.csv  17_0_-1_2568_1_4_4.csv  17_0_-1_5136_1_1_2.csv  17_0_-1_5136_1_2_2.csv  17_0_-1_5275_0_0_4.csv  17_0_-1_5275_0_1_4.csv  17_0_-1_5275_0_2_4.csv  17_0_-1_5275_0_3_4.csv  17_0_-1_5275_0_4_4.csv  21_0_-1_10000_0_1_1.csv  21_0_-1_10000_0_1_2.csv  21_0_-1_10000_0_2_2.csv  21_0_-1_10000_1_1_1.csv  21_0_-1_10000_1_1_2.csv  21_0_-1_10000_1_2_2.csv  21_0_-1_10159_1_1_1.csv  21_0_-1_10550_0_1_2.csv  21_0_-1_10550_0_2_2.csv  21_0_-1_21000_0_1_1.csv  21_0_-1_21100_0_1_1.csv  21_0_-1_2539_1_0_4.csv  21_0_-1_2539_1_1_4.csv  21_0_-1_2539_1_2_4.csv  21_0_-1_2539_1_3_4.csv  21_0_-1_2539_1_4_4.csv  21_0_-1_5079_1_1_2.csv  21_0_-1_5079_1_2_2.csv  21_0_-1_5275_0_0_4.csv  (+222 more)
data/train_test_src/: 17_integrated.csv  21_integrated.csv  22_integrated.csv  23_integrated.csv  24_integrated.csv  25_integrated.csv  26_integrated.csv  27_integrated.csv  28_integrated.csv  29_integrated.csv  32_integrated.csv
include/: NVAR.hpp  NVAR_nonlinear.hpp  NVAR_nonlinear_constructor.hpp  NVAR_solvers.hpp  NVAR_util.hpp  simple_csv.hpp
include/CSV/: simple_csv.hpp
include/ESN/: ESN.hpp  ESN_util.hpp
include/NVAR/: NVAR.hpp  NVAR_util.hpp
include/util/: common.hpp
include/wip/: NVAR_config.hpp  NVAR_pipe.hpp
src/: NVAR_util.cpp  decompress_signal.py  main.cpp  signal_distributions.cpp  tmp.cpp  unit_test.cpp
